--- a/door/css/style.css
+++ b/door/css/style.css
@@ -7,7 +7,7 @@ h2 { text-align: center; padding: 5px; margin: 10px; background: #fff2b6; color:
 #garagedoor {
 	margin: 10px auto;
 	list-style: none;
-	background: url(../images/menu-bg.jpg) no-repeat;
+	background: url(../images/menu-bg2.jpg) no-repeat;
 	width: 800px;
 	overflow: auto;	
 }
